<resources>
    <string name="app_name">Natureza</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_ci">CI</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_apPat">Apellido Paterno</string>
    <string name="prompt_apMat">Apellido Materno</string>
    <string name="prompt_num">Número Teléfono</string>
    <string name="prompt_correo">Email</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_reg">REGISTRAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Usuario no válido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Se necesita el permiso del contacto para usar su email"
    </string>
    <string name="title_activity_registro">Registrar</string>
    <string name="title_activity_session_cliente">SessionCliente</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_session_dristribuidor">SessionDristribuidor</string>
    <string name="title_activity_registro_direccion">Dirección</string>
    <string name="nav_client_address">Mis Direcciones</string>
    <string name="nav_client_item">Productos</string>
    <string name="nav_client_device">Equipos</string>
    <string name="nav_client_order">Pedidos</string>
    <string name="nav_dist_address">Direcciones de Pedidos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
