<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/nav_client_address" />

        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/ic_nav_pro"
            android:title="@string/nav_client_item" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_nav_eq"
            android:title="@string/nav_client_device" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_nav_eq"
            android:title="@string/nav_client_order" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Configuraciones" />
    </group>

  <!--  <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
